--- a/.env
+++ b/.env
@@ -43,3 +43,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+MAILER_DSN=smtp://mailer:1025
+JWT_SECRET='ChallengeIw4!'
