--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,21 +28,16 @@ security:
         path: /
         always_remember_me: true
 
-      # activate different ways to authenticate
-      # https://symfony.com/doc/current/security.html#the-firewall
-
-      # https://symfony.com/doc/current/security/impersonating_user.html
-      # switch_user: true
-
-  # Easy way to control access for large sections of your site
-  # Note: Only the *first* access control that matches will be used
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/login, roles: PUBLIC_ACCESS }
+    - { path: ^/register, roles: PUBLIC_ACCESS }
+    - { path: ^/reset-password, roles: PUBLIC_ACCESS }
+    - { path: ^/, roles: ROLE_USER }
+
   role_hierarchy:
-    ROLE_USER: user
-    ROLE_COMPAGNY: employee
-    ROLE_ADMIN: admin
+    # ROLE_MODERATOR: ROLE_USER
+    ROLE_ADMIN: ROLE_ADMIN
 
 when@test:
   security:
