--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "2.*",
         "doctrine/doctrine-migrations-bundle": "3.*",
         "doctrine/orm": "2.*",
+        "dompdf/dompdf": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
         "ramsey/uuid-doctrine": "^2.0",
