--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/orm": "2.*",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
+        "ramsey/uuid-doctrine": "^2.0",
         "sensio/framework-extra-bundle": "6.*",
         "stof/doctrine-extensions-bundle": "^1.10",
         "symfony/asset": "6.*",
