change role basic to company and add register for user basic

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,6 +37,7 @@ security:
 
   role_hierarchy:
     # ROLE_MODERATOR: ROLE_USER
+    ROLE_COMPANY: ROLE_COMPANY
     ROLE_ADMIN: ROLE_ADMIN
 
 when@test:
