--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   php:
@@ -12,7 +12,6 @@ services:
       - database
     networks:
       - symfony
-    command: bash -c "chown -R www-data:www-data /var/www/symfony/var/log && php-fpm"
 
   node:
     image: node:14
