--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,9 @@ parameters:
   app.jwtsecret: "%env(JWT_SECRET)%"
 
 services:
+  App\EventSubscriber\VerifiedUserSubscriber:
+    tags:
+      - { name: "kernel.event_subscriber" }
   # default configuration for services in *this* file
   _defaults:
     autowire: true # Automatically injects dependencies in your services.
