--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -1,14 +1,29 @@
 FROM php:8.1-fpm
 
 # Mettre à jour les paquets et installer les dépendances requises
+# RUN apt-get update && apt-get install -y \
+#         git \
+#         unzip \
+#         libzip-dev \
+#         libpq-dev \
+#         && docker-php-ext-install zip \
+#         && docker-php-ext-install pdo pdo_pgsql \
+#         && rm -rf /var/lib/apt/lists/*
+
 RUN apt-get update && apt-get install -y \
         git \
         unzip \
         libzip-dev \
         libpq-dev \
+        libfreetype6-dev \
+        libjpeg62-turbo-dev \
+        libpng-dev \
+        libwebp-dev \
+        && rm -rf /var/lib/apt/lists/* \
+        && docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp \
+        && docker-php-ext-install -j$(nproc) gd \
         && docker-php-ext-install zip \
-        && docker-php-ext-install pdo pdo_pgsql \
-        && rm -rf /var/lib/apt/lists/*
+        && docker-php-ext-install pdo pdo_pgsql
 
 # Installer Composer
 RUN curl -sS https://getcomposer.org/installer -o composer-setup.php \
